syntax = "proto3";

package post;

option go_package = "pb;postpb";

message Post {
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
}

message CreatePostRequest {
    Post post = 1;
}

message CreatePostResponse {
    Post post = 1;
}

message ReadPostRequest {
    string post_id = 1;
}

message ReadPostResponse {
    Post post = 1;
}

message ListPostRequest {
}

message ListPostResponse {
    Post post = 1;
}

service PostService {
    rpc CreatePost (CreatePostRequest) returns (CreatePostResponse);
    rpc ReadPost (ReadPostRequest) returns (ReadPostResponse); // may return NOT_FOUND error if not_found
    rpc ListPost (ListPostRequest) returns (stream ListPostResponse);
}